--- a/css/responsive.css
+++ b/css/responsive.css
@@ -8,10 +8,9 @@
     transform-origin: top left 0;
     margin: 0;
     text-align: left;
-    font-size: 12vh;
+    font-size: 11.5vh;
 }
 
-/*@media (max-width:1309px) {*/
   #cover-photo {
     max-width: 300px;
     margin-top: 20px;
@@ -51,14 +50,20 @@
   }*/
 
   .content {
-    padding-right: 3em;
+    padding-right: 2em;
+    padding-top: 2em;
   }
 
   .footer {
-    font-size: 0.85em;
+    font-size: 3vh;
     background-color: #00000000 !important;
   }
-/*}*/
+@media (max-width:1009px) {
+.grid-item {
+  width: 45%;
+  margin: 2%;
+}
+}
 
 
 /**
